# infinite-env-harness

./: .gitignore  DESIGN.md  README.md  SUBMISSION_EMAIL.md  baselines.py  demo.py  evaluate.py  learnability.py  nav_probe.py  play.py  pyproject.toml  requirements.txt
assets/: nav_probe.json  nav_result.json  reward_model.json
harness/: compiler.py  critic.py  eval.py  fixtures.py  generator.py  gym_env.py  mutate.py  operators.py  reward_model.py  rollout.py  verifier.py
harness/agents/: greedy.py  pixel_agent.py  reward_greedy.py  scripted.py  state_agent.py
harness/dsl/: schema.py
harness/engine/: gridlogic.py  renderer.py  world.py
scripts/: build_assets.py  build_specs.py  nav_demo.py  train_reward_model.py
specs/: coins_hazard.json  key_crate_return.json  occlusion_can.json  open_can.json  patrol_gauntlet.json  push_delivery.json  three_rooms.json
tests/: test_smoke.py
